<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.sparna.rdf.shacl</groupId>
    <artifactId>shacl-play-root-pom</artifactId>
    <version>0.4</version>
    <packaging>pom</packaging>

    <name>SHACL-Play root pom</name>

    <modules>
        <module>shacl-diagram</module>
        <module>shacl-doc</module>
        <module>shacl-validator</module>
        <module>shacl-printer</module>
        <module>shacl-play-app</module>
        <module>shacl-play</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>8</java.version>
        <jena.version>3.11.0</jena.version>
        <jtwig.version>5.87.0.RELEASE</jtwig.version>
        <jackson.version>2.11.3</jackson.version>
        <!-- library versions -->
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <configuration>
                    <additionalConfig>
                        <file>
                            <name>.settings/org.eclipse.core.resources.prefs</name>
                            <content><![CDATA[
encoding/<project>=${project.build.sourceEncoding}
eclipse.preferences.version=1
    ]]></content>
                        </file>
                    </additionalConfig>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>

            <!-- for command-line parsing -->
            <dependency>
                <groupId>com.beust</groupId>
                <artifactId>jcommander</artifactId>
                <version>1.72</version>
            </dependency>
            <dependency>
              <groupId>info.picocli</groupId>
              <artifactId>picocli</artifactId>
              <version>4.5.1</version>
            </dependency>

            <!-- Jena -->
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-core</artifactId>
                <version>${jena.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-arq</artifactId>
                <version>${jena.version}</version>
            </dependency>

            <!-- logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.25</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.2.3</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.6</version>
            </dependency>
            
            <!-- Testing: JUnit -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13</version>
                <scope>test</scope>
            </dependency>

            <!-- SHACL -->
            <dependency>
                <groupId>org.topbraid</groupId>
                <artifactId>shacl</artifactId>
                <version>1.3.2</version>
            </dependency>

            <!-- Fremarker -->
            <dependency>
                <groupId>org.freemarker</groupId>
                <artifactId>freemarker</artifactId>
                <version>2.3.30</version>
            </dependency>

            <!-- PlantUML -->
            <dependency>
              <groupId>net.sourceforge.plantuml</groupId>
              <artifactId>plantuml</artifactId>
              <version>8059</version>
            </dependency>

            <!-- Jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>
